Modernize deprecated APIs and delete the dead remote config layer (#504)
* Modernize deprecated APIs and delete the dead remote config layer

Mechanical modernization of the code the audit flagged; no user visible
behavior changes. The riskier UI work (activity result API, fragment state,
action bar tabs) is deliberately left for a follow up.

ConfigManager is gone. It had been a stub with no backing store since firebase
remote config was removed: its synchronous overload always returned false and
the callback overload always yielded null. Its last consumer was the in-app
review prompt in DocumentFragment, whose lite branch therefore never fired -
so "pro asks for a review, lite does not" is now written directly instead of
being routed through a lookup that cannot return a value. CoreLoader's use of
it went away earlier in this stack.

Deprecated APIs:
- new Handler() picks up the looper of whatever thread happens to construct
  it; all four uses meant the main looper and now say so
- android.preference.PreferenceManager is deprecated, and its androidx
  replacement lives in a preference-ui library we do not otherwise need. The
  default preferences file is opened by name instead, which is exactly what
  PreferenceManager did, so the stored catch-all setting survives upgrades.
- WindowManager.getDefaultDisplay() in AdManager, replaced with the resources'
  display metrics: same width and density, and no API 30 branch

Parcelable: Options and Result had raw Parcelable.Creator fields and read
their contents with a null class loader, which resolves to the framework
loader and cannot see app classes. Both are typed now and pass an explicit
loader (lint ParcelClassLoader).

RecentDocumentsUtil returned its entries in a HashMap, so the "recent
documents" list came back in arbitrary rather than recent order. It also
hand-rolled nested try/finally chains that try-with-resources expresses
directly, and relied on the platform default charset.

Espresso no longer ships in the 